Push current codebase to GitHub repository

--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,7 @@
     <title>SwapSkill - Trade Skills, Not Cash</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <meta name="description" content="SwapSkill - A platform to trade talents, not cash. Connect with people to teach and learn skills.">
+    <link rel="icon" href="/tab.ico" />
   </head>
   <body>
     <div id="root"></div>
